# jobs-dashboard-project

./: .gitignore  docker-compose.yaml  readme.md
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 738fa211fafd_initial_migration.py
backend/app/: crud.py  database.py  main.py  models.py  populate_data.py  random_data.py  schemas.py
streamlit-app/: Dockerfile  pyproject.toml
streamlit-app/app/: config.toml  main.py  utils.py
