[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nickTheof <156532831+nickTheof@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
fastapi = {extras = ["standard"], version = "^0.111.0"}
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
