[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["nickTheof <156532831+nickTheof@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
streamlit-option-menu = "^0.3.13"
seaborn = "^0.13.2"
requests = "^2.32.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
